adds admin dashboard components and routes

--- a/src/index.html
+++ b/src/index.html
@@ -7,16 +7,16 @@
     <title>Title</title>
   </head>
   <body>
-    <div id="root">not rendered</div>
+    <div id="root"></div>
     <script src="./index.js"></script>
 
-    The core Firebase JS SDK is always required and must be listed first
-<script src="/__/firebase/7.6.1/firebase-app.js"></script>
+    <!-- The core Firebase JS SDK is always required and must be listed first -->
+<!-- <script src="/__/firebase/7.6.1/firebase-app.js"></script> -->
 
 <!-- TODO: Add SDKs for Firebase products that you want to use
      https://firebase.google.com/docs/web/setup#available-libraries -->
 
 <!-- Initialize Firebase -->
-<script src="/src/firebase.js"></script>
+<!-- <script src="/src/firebase.js"></script> -->
   </body>
 </html>
